Fix setting editor overflow bug.

--- a/packages/settingeditor-extension/style/settingeditor.css
+++ b/packages/settingeditor-extension/style/settingeditor.css
@@ -121,6 +121,7 @@
   height: 100%;
   margin-left: 0;
   margin-right: 0;
+  overflow: auto;
 }
 
 
